--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chatapp",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://localhost:8001",
+  "proxy": "http://localhost:8001",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
@@ -12,7 +12,7 @@
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "history": "^4.10.1",
-    "node-sass": "^4.11.0",
+    "node-sass": "^5.0.0",
     "perfect-scrollbar": "^1.5.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -20,6 +20,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-swipeable-views": "^0.13.9",
+    "twilio": "^3.54.1",
+    "twilio-video": "^2.10.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
