--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "history": "^4.10.1",
-    "node-sass": "^5.0.0",
+    "node-sass": "^4.11.0",
     "perfect-scrollbar": "^1.5.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
